# opensignals

./: .gitignore  eodhd-map.parquet  flake.nix  pyproject.toml  requirements-dex.txt  requirements.txt
src/opensignals/: __main__.py  main.py
src/opensignals/data/: common.py  eodhistoricaldata.py  fmp.py  provider.py  yahoo.py
